sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: not found: value estTriee
  while (!estTrie && estTriee<getNombreValeurs()) {
                     ^