sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2()  {
  var estTrie:Boolean = false
  var triees:Int = 0
  while (!estTrie && estTriee<getNombreValeurs()) {
    estTrie = true
    for (i <- 0 to getNombreValeurs()-2-triees) {
      if (plusPetitQue(i+1,getValeur(i))) {
        echange(i,i+1)
        estTrie = false
      }
    }
    triees += 1
  }
}